manifests/deployment.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: profile 
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: profile 
    spec:
      containers:
        - name: profile
          image: fluffyspoon.azurecr.io/profile
          ports:
          - containerPort: 8080
          livenessProbe:
              httpGet:
                  path: actuator/health/live
                  port: 8080
              initialDelaySeconds: 5
              periodSeconds: 10
          readinessProbe:
              httpGet:
                  path: actuator/health/ready
                  port: 8080
              initialDelaySeconds: 5
              periodSeconds: 10
