manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: profile
spec:
    type: LoadBalancer
    ports:
    - port: 8080
    selector:
        app: profile
