manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: profile
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: profile.0d136eaef9f24e1c828e.westeurope.aksapp.io
    http:
      paths:
      - backend:
          serviceName: profile
          servicePort: 8080
        path: /
